fixing bug layout and navbar collapse

--- a/public/web/css/bootstrap/bootstrap.css
+++ b/public/web/css/bootstrap/bootstrap.css
@@ -4199,11 +4199,11 @@ textarea.form-control-lg {
   color: #CC1522;
 }
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.55);
-  border-color: rgba(0, 0, 0, 0.1);
+  color: transparent;
+  border-color: none;
 }
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(204,21,34)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 .navbar-light .navbar-text {
   color: rgba(0, 0, 0, 0.55);
@@ -5816,14 +5816,15 @@ textarea.form-control-lg {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15%;
+  width: 50;
   padding: 0;
   color: #fff;
   text-align: center;
-  background: none;
+  /* background: none; */
   border: 0;
   opacity: 0.5;
   transition: opacity 0.15s ease;
+  background: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-control-prev,
@@ -5841,11 +5842,11 @@ textarea.form-control-lg {
 }
 
 .carousel-control-prev {
-  left: -200px;
+  left: -80px;
 }
 
 .carousel-control-next {
-  right: -200px;
+  right: -80px;
 }
 
 .carousel-control-prev-icon,
